--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,11 @@
   --lightBg: hsl(0, 100%, 100%);
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 body {
   box-sizing: border-box;
   min-width: 360px;
